--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "type": "module",
     "main": "src/monitor.js",
     "scripts": {
-        "monitor": "node src/monitor.js"
+        "monitor": "node src/monitor.js",
+        "test": "mocha --require esm 'test/**/*.test.js'"
     },
     "author": "",
     "license": "ISC",
@@ -16,5 +17,10 @@
         "nodemailer": "^6.7.8",
         "redis": "^4.3.1",
         "twilio": "^3.84.0"
+    },
+    "devDependencies": {
+        "chai": "^4.3.10",
+        "esm": "^3.2.25",
+        "mocha": "^10.2.0"
     }
 }
